--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/x-data-grid": "^7.22.1",
-    "6pp": "^1.2.16",
+    "@reduxjs/toolkit": "^2.3.0",
+    "6pp": "^1.3.8",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -23,7 +25,9 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.27.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
